--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "husky": "^9.1.7",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "nuqs": "^2.4.3",
@@ -81,7 +82,6 @@
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-sonarjs": "^3.0.2",
     "globals": "^16.2.0",
-    "husky": "^8.0.0",
     "lint-staged": "^15.5.2",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
